# wxpath

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  ASYNC_README.md  CHANGELOG.md  CLAUDE.md  COMPARISONS.md  DESIGN.md  Dockerfile.dev  EXAMPLES.md  LICENSE  README.md  docker-compose.yml  docs_config.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test_async.py  test_async_import.py  test_sync_import.py  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
api/: index.html
api/core/: index.html
api/core/engine/: index.html
api/core/ops/: index.html
api/http/: index.html
api/http/crawler/: index.html
api/integrations/langchain/: index.html
api/settings/: index.html
docs/: examples.md  getting-started.md  index.md  macros.py
docs/api/: index.md  settings.md
docs/api/core/: engine.md  index.md  ops.md
docs/api/http/: crawler.md  index.md
docs/api/integrations/: langchain.md
docs/assets/: matrix-theme.css
docs/guide/: cli.md  configuration.md  hooks.md  language-design.md
docs/scripts/: update_docs_from_config.py
docs/tui/: index.md  quickstart.md
examples/: graph_database_example.py  index.html
getting-started/: index.html
guide/cli/: index.html
guide/configuration/: index.html
guide/hooks/: index.html
guide/language-design/: index.html
scripts/: preprocess_readme.py
search/: search_index.json
src/wxpath/: __init__.py  cli.py  hooks.py  patches.py  settings.py  tui.py  tui_settings.py
src/wxpath/core/: __init__.py  dom.py  engine.py  errors.py  helpers.py  models.py  ops.py  parser.py
src/wxpath/core/runtime/: __init__.py  engine.py  helpers.py
src/wxpath/hooks/: __init__.py  builtin.py  registry.py
src/wxpath/http/: crawler.py  stats.py
src/wxpath/http/client/: __init__.py  cache.py  crawler.py  request.py  response.py
src/wxpath/http/policy/: backoff.py  retry.py  robots.py  throttler.py
src/wxpath/integrations/langchain/: loader.py
src/wxpath/integrations/langchain/examples/: basic_rag.py  rolling_window_rag.py
src/wxpath/util/: cleaners.py  common_paths.py  logging.py  serialize.py
tests/: test_core.py  test_core_async.py  test_core_async_.py  test_core_async_blocking.py  test_core_concurrent.py  test_core_sync.py  test_hooks.py  test_neo4j_extension.py  utils.py
tests/core/: test_async_.py  test_engine.py  test_op_handlers.py  test_ops.py  test_parser.py  test_patches.py  test_sync.py
tests/core/runtime/: test_engine.py
tests/core/runtine/: test_engine.py
tests/extensions/graph/: test_pipeline.py
tests/hooks/: test_registry.py
tests/http/client/: test_crawler.py
tests/http/policy/: test_retry.py  test_robots.py  test_throttler.py
tui/: index.html
tui/quickstart/: index.html
wxpath/: __init__.py  async_core.py  cli.py  config.py  core.py  core_async.py  core_async_blocking.py  core_concurrent.py  core_config.py  crawler.py  graph_integration.py  graph_models.py  hooks.py  logging_utils.py  models.py  neo4j_extension.py  patches.py
wxpath/core/: __init__.py  async_.py  engine.py  errors.py  helpers.py  http.py  models.py  op_handlers.py  parser.py  patches.py  sync.py  task.py
wxpath/extensions/: __init__.py
wxpath/extensions/graph/: __init__.py  config.py  integration.py  pipeline.py  queries.py
