[build-system]
requires = ["setuptools>=61.0", "wheel", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "wxpath"
version = "0.1.1"
description = "wxpath - a declarative web crawler and data extractor"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Rodrigo Palacios", email = "rodrigopala91@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "requests>=2.0",
    "lxml>=4.0",
    "elementpath>=5.0.0",
    "aiohttp>=3.8.0"
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.23"]
dev = ["ruff"]

[project.scripts]
wxpath = "wxpath.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
include = ["wxpath"]

[tool.ruff]
target-version = "py311"
line-length = 100

lint.select = [
    "F",      # pyflakes (unused vars, undefined names, etc.)
    "E",      # pycodestyle errors
    "B",      # flake8-bugbear (real footguns)
    "ASYNC",  # async/await correctness
    "I",      # isort rules
    "TID",    # Tidy imports
    "ICN",    # Import conventions
]

[tool.ruff.format]
quote-style = "single"
